--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -17,3 +17,4 @@ Zhong wenxin:
   github    : wenxin195 # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
   Bilibili  : 10738871
+  offi_acc  : 
