--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -19,25 +19,25 @@ default:
     mode: normal
     type: webpage
     article_header:
-      align: left
+      align: center
       theme: light
     articles:
       show_cover: true
-      show_excerpt: false
-      show_readmore: false
-      show_info: false
+      show_excerpt: true
+      show_readmore: true
+      show_info: true
     show_title: true
     show_edit_on_github: false
     show_date: true
     show_tags: true
     show_author_profile: false
-    show_subscribe: true
+    show_subscribe: false
     full_width: false
     sharing: true
-    comment: true
+    comment: false
     license: false
-    pageview: false
-    search: default
+    pageview: true
+    search: default # algolia or lunr
 
 sources:
   bootcdn:
