--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,8 @@ author:
   linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : wenxin195 # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
-  Bilibili  : 10738871
+  bili      : 10738871
+  red       : 624e669e0000000010006940
 
 
 ## => GitHub Repository (if the site is hosted by GitHub)
