--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,5 +16,5 @@ Zhong wenxin:
   linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : wenxin195 # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
-  Bilibili  : 10738871
-  offi_acc  : 
+  bili      : 10738871
+  red       : 624e669e0000000010006940
