--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -7,8 +7,10 @@ default:
     home: /
     archive:  /archive.html
     rss:  /feed.xml
-  mathjax: true
-  mathjax_autoNumber: true
+  katex: true
+  katex_autoNumber: true
+  mathjax: false
+  mathjax_autoNumber: false
   mermaid: true
   chart: true
   toc:
@@ -49,6 +51,7 @@ sources:
       js: 'https://cdn.bootcss.com/gitalk/1.2.2/gitalk.min.js'
       css: 'https://cdn.bootcss.com/gitalk/1.2.2/gitalk.min.css'
     valine: 'https://unpkg.com/valine/dist/Valine.min.js' # bootcdn not available
+    katex: "https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js"
     mathjax: 'https://cdn.bootcss.com/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML'
     mermaid: 'https://cdn.bootcss.com/mermaid/8.0.0-rc.8/mermaid.min.js'
   unpkg:
@@ -60,5 +63,6 @@ sources:
       js: 'https://unpkg.com/gitalk@1.2.2/dist/gitalk.min.js'
       css: 'https://unpkg.com/gitalk@1.2.2/dist/gitalk.css'
     valine: 'https//unpkg.com/valine/dist/Valine.min.js'
+    katex: "https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js"
     mathjax: 'https://unpkg.com/mathjax@2.7.4/unpacked/MathJax.js?config=TeX-MML-AM_CHTML'
     mermaid: 'https://unpkg.com/mermaid@8.0.0-rc.8/dist/mermaid.min.js'
