--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ repository_tree: main
 ##############################
 paths:
   root    : # title link url, "/" (default)
-  home    : # home layout url, "/" (default)
+  home    : /about.html # home layout url, "/" (default)
   archive : # "/archive.html" (default)
   rss     : # "/feed.xml" (default)
 
@@ -90,6 +90,7 @@ toc:
 ## Mathjax
 katex: true
 katex_autoNumber: true
+
 mathjax: false # false (default), true
 mathjax_autoNumber: false # false (default), true
 
