--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -37,8 +37,8 @@ default:
     show_subscribe: false
     full_width: false
     sharing: true
-    comment: false
-    license: false
+    comment: true
+    license: true
     pageview: true
     search: default # algolia or lunr
 
@@ -46,11 +46,11 @@ sources:
   bootcdn:
     font_awesome: "https://cdn.bootcdn.net/ajax/libs/font-awesome/5.15.1/css/all.css"
     jquery: "https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"
-    leancloud_js_sdk: "//cdn.jsdelivr.net/npm/leancloud-storage@3.13.2/dist/av-min.js"
+    leancloud_js_sdk: "https://cdn.jsdelivr.net/npm/leancloud-storage@3.13.2/dist/av-min.js"
     chart: "https://cdn.bootcss.com/Chart.js/2.7.2/Chart.bundle.min.js"
     gitalk:
-      js: "https://cdn.bootcss.com/gitalk/1.2.2/gitalk.min.js"
-      css: "https://cdn.bootcss.com/gitalk/1.2.2/gitalk.min.css"
+      js: "https://cdn.bootcss.com/gitalk/1.8.0/gitalk.min.js"
+      css: "https://cdn.bootcss.com/gitalk/1.8.0/gitalk.min.css"
     valine: "https://unpkg.com/valine/dist/Valine.min.js" # bootcdn not available
     katex: "https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js"
     mathjax: "https://cdn.bootcss.com/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"
@@ -58,11 +58,11 @@ sources:
   unpkg:
     font_awesome: "https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     jquery: "https://unpkg.com/jquery@3.3.1/dist/jquery.min.js"
-    leancloud_js_sdk: "//cdn.jsdelivr.net/npm/leancloud-storage@3.13.2/dist/av-min.js"
+    leancloud_js_sdk: "https://cdn.jsdelivr.net/npm/leancloud-storage@3.13.2/dist/av-min.js"
     chart: "https://unpkg.com/chart.js@2.7.2/dist/Chart.min.js"
     gitalk:
-      js: "https://unpkg.com/gitalk@1.2.2/dist/gitalk.min.js"
-      css: "https://unpkg.com/gitalk@1.2.2/dist/gitalk.css"
+      js: "https://unpkg.com/gitalk/dist/gitalk.min.js"
+      css: "https://unpkg.com/gitalk/dist/gitalk.css"
     valine: "https//unpkg.com/valine/dist/Valine.min.js"
     katex: "https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js"
     mathjax: "https://unpkg.com/mathjax@2.7.4/unpacked/MathJax.js?config=TeX-MML-AM_CHTML"
