--- a/_config.yml
+++ b/_config.yml
@@ -137,12 +137,13 @@ comments:
   # please refer to https://github.com/gitalk/gitalk for more info.
   gitalk:
     enable      : true
-    clientID    : "Iv23li8wTaaop9cigLmK" # GitHub Application Client ID
-    clientSecret: "873bcb197618d190e3ecd5ff09fdfb1c02d9918f" # GitHub Application Client Secret
-    repository  : "blog-comments" # GitHub repo
-    owner       : "wenxin195" # GitHub repo owner
-    admin       :  ["wenxin195"] # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
+    clientID    : Iv23li8wTaaop9cigLmK # GitHub Application Client ID
+    clientSecret: 873bcb197618d190e3ecd5ff09fdfb1c02d9918f # GitHub Application Client Secret
+    repository  : blog-comments # GitHub repo
+    owner       : wenxin195 # GitHub repo owner
+    admin       : # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
       # - your GitHub Id
+      - wenxin195
 
   ## Valine
   # please refer to https://valine.js.org/en/ for more info.
