--- a/_data/locale.yml
+++ b/_data/locale.yml
@@ -20,6 +20,9 @@ en: &EN
   EMAIL_ME                : "Send me an Email."
   EMAIL_US                : "Send us an Email."
   COPYRIGHT_DATES         : "2024"
+  UNIT                    : "min"
+  PROMPT                  : "read"
+  WORDS                   : "words"
 
 en-GB:
   <<: *EN
@@ -41,7 +44,7 @@ zh-Hans: &ZH_HANS
   LAST_UPDATED            : "更新于"
   PREVIOUS                : "上篇"
   NEXT                    : "下篇"
-  ARTICLE_DATE_FORMAT     : "%Y年 %m月%d日"
+  ARTICLE_DATE_FORMAT     : "%Y年%m月%d日"
   ARTICLE_LIST_DATE_FORMAT: "%m月%d日"
   STATISTICS              : "共计 [POST_COUNT] 篇文章，[PAGE_COUNT] 页。"
   LICENSE_ANNOUNCE        : "本文遵守 [LICENSE] 许可协议。"
@@ -51,6 +54,9 @@ zh-Hans: &ZH_HANS
   EMAIL_ME                : "给我发邮件。"
   EMAIL_US                : "给我们发邮件。"
   COPYRIGHT_DATES         : "2024"
+  UNIT                    : "分钟"
+  PROMPT                  : "大约阅读"
+  WORDS                   : "字"
 
 zh:
   <<: *ZH_HANS
@@ -70,7 +76,7 @@ zh-Hant: &ZH_HANT
   LAST_UPDATED            : "更新於"
   PREVIOUS                : "上篇"
   NEXT                    : "下篇"
-  ARTICLE_DATE_FORMAT     : "%Y年 %m月%d日"
+  ARTICLE_DATE_FORMAT     : "%Y年%m月%d日"
   ARTICLE_LIST_DATE_FORMAT: "%m月%d日"
   STATISTICS              : "共計 [POST_COUNT] 篇文章，[PAGE_COUNT] 頁。"
   LICENSE_ANNOUNCE        : "本文遵守 [LICENSE] 許可協議。"
