--- a/_config.yml
+++ b/_config.yml
@@ -223,7 +223,7 @@ defaults:
         toc: true
       show_edit_on_github: false
       show_subscribe: false
-      pageview: true
+      pageview: false
 
 
 sass:
