add linkedin contact

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author:
   medium    : # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
   zhihu     : wu-se-de-shi-jie-38 # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
-  linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
+  linkedin  : 钟文鑫 # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : wenxin195 # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
   bili      : 10738871
