--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for
 ##############################
 author:
   type      : person # "person" (default), "organization"
-  name      : Zhong wenxin
+  name      : Wenxin Zhong
   url       : https://wenxin195.github.io
   avatar    : # path or url of avatar image (square)
   bio       : "打工人"
