--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -33,7 +33,7 @@ default:
     show_date: true
     show_tags: true
     show_author_profile: false
-    read_time: false
+    read_time: true
     show_subscribe: false
     full_width: false
     sharing: true
