--- a/_config.yml
+++ b/_config.yml
@@ -21,15 +21,15 @@ highlight_theme: tomorrow-night-bright # "default" (default), "tomorrow", "tomor
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 Encoding: utf-8
-title   : 数学与统计
+title   : Wenxin's Blog
 description: > # this means to ignore newlines until "Language & timezone"
-  分享数学与统计学知识
+  专注于数学与统计学
 
 
 ## => Language and Timezone
 ##############################
 lang: zh-CN # the language of your site, default as "en"
-timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
+timezone: Asia/Shanghai # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
 
 
 ## => Author and Social
@@ -38,8 +38,8 @@ author:
   type      : person # "person" (default), "organization"
   name      : Wenxin Zhong
   url       : https://wenxin195.github.io
-  avatar    : # path or url of avatar image (square)
-  bio       : "打工人"
+  avatar    : assets/images/avatar/avatar.jpg # path or url of avatar image (square)
+  bio       : Anything But Ordinary
   email     : zzjj921@126.com
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
