--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,8 @@ Wenxin Zhong:
   type      : person # "person" (default), "organization"
   name      : Wenxin Zhong
   url       : https://wenxin195.github.io
-  avatar    : # path or url of avatar image (square)
-  bio       : "打工人"
+  avatar    : assets/images/avatar/avatar.jpg # path or url of avatar image (square)
+  bio       : Anything But Ordinary
   email     : zzjj921@126.com
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
