--- a/_data/licenses.yml
+++ b/_data/licenses.yml
@@ -1,4 +1,4 @@
-# 存放文章许可证，严格程度：
+# 存放文章许可证，严格等级：
 # CC-BY > CC-BY-SA > CC-BY-NC > CC-BY-NC-SA > CC-BY-ND > CC-BY-NC-ND
 CC-BY-4.0:
   name: Attribution 4.0 International
