--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ author:
   avatar    : assets/images/avatar/avatar.jpg # path or url of avatar image (square)
   bio       : Anything But Ordinary
   email     : zzjj921@126.com
-  facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
+  facebook  : 61569485184749 # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
   weibo     : 2943658367 # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
   googleplus: # "user_id"   the last part of your profile url, e.g. https://plus.google.com/u/0/user_id
