--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,11 +12,11 @@ Wenxin Zhong:
   googleplus: # "user_id"   the last part of your profile url, e.g. https://plus.google.com/u/0/user_id
   telegram  : # "user_name" the last part of your profile url, e.g. https://t.me/user_name
   medium    : # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
-  zhihu     : wu-se-de-shi-jie-38 # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
+  zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
   linkedin  : 钟文鑫 # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : wenxin195 # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
   bili      : 10738871
-  red       : 624e669e0000000010006940
+  red       : # "user_id" the last part of your profile url, e.g. https://www.xiaohongshu.com/user/profile/user_id
   csdn      : weixin_46784010
