--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -10,8 +10,8 @@ default:
     rss: /feed.xml
   mathjax: true
   mathjax_autoNumber: true
-  mermaid: true
-  chart: true
+  mermaid: false
+  chart: false
   toc:
     selectors: "h1,h2,h3"
   sources: bootcdn
@@ -51,7 +51,7 @@ sources:
       js: "https://cdn.bootcss.com/gitalk/1.8.0/gitalk.min.js"
       css: "https://cdn.bootcss.com/gitalk/1.8.0/gitalk.min.css"
     valine: "https://unpkg.com/valine/dist/Valine.min.js" # bootcdn not available
-    mathjax: https://cdn.bootcdn.net/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js  # 除了用mathjax，还可以用katex
+    mathjax: https://cdn.bootcdn.net/ajax/libs/mathjax/4.0.0-beta.7/tex-mml-svg.js  # 除了用mathjax，还可以用katex
     mermaid: "https://cdn.bootcss.com/mermaid/8.0.0-rc.8/mermaid.min.js"
   unpkg:
     font_awesome: "https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -62,5 +62,5 @@ sources:
       js: "https://unpkg.com/gitalk/dist/gitalk.min.js"
       css: "https://unpkg.com/gitalk/dist/gitalk.css"
     valine: "https//unpkg.com/valine/dist/Valine.min.js"
-    mathjax: "https://unpkg.com/mathjax@2.7.4/unpacked/MathJax.js?config=TeX-MML-AM_CHTML"
+    mathjax: "https://www.unpkg.com/browse/mathjax@3.2.2/es5/tex-mml-svg.js"
     mermaid: "https://unpkg.com/mermaid@8.0.0-rc.8/dist/mermaid.min.js"
