--- a/_config.yml
+++ b/_config.yml
@@ -211,6 +211,7 @@ exclude:
   - package-lock.json
   - package.json
   - /vendor
+  - module_use.md
 
 defaults:
   - scope:
@@ -226,35 +227,18 @@ defaults:
       show_subscribe: false
       pageview: false
 
-
+## => CSS style configuration
+##############################
 sass:
   style: compressed
   sass_dir: _sass
 
-jekyll-minifier:
-  preserve_php: true
-  remove_spaces_inside_tags: true
-  remove_multi_spaces: true
-  remove_comments: true
-  remove_intertag_spaces: true
-  remove_quotes: false
-  compress_css: true
-  compress_javascript: true
-  compress_json: true
-  simple_doctype: false
-  remove_script_attributes: false
-  remove_style_attributes: false
-  remove_link_attributes: false
-  remove_form_attributes: false
-  remove_input_attributes: false
-  remove_javascript_protocol: false
-  remove_http_protocol: false
-  remove_https_protocol: false
-  preserve_line_breaks: false
-  simple_boolean_attributes: false
-  compress_js_templates: false
 
 ## => Plugins
 ##############################
 plugins:
-  - jekyll-minifier
+  - jekyll-include-cache
+  - jekyll-paginate
+  - jekyll-sass-converter
+  - jekyll-seo-tag
+  - jekyll-sitemap
