--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -43,16 +43,16 @@ default:
 
 sources:
   bootcdn:
-    font_awesome: "https://cdn.bootcdn.net/ajax/libs/font-awesome/5.15.1/css/all.css"
-    jquery: "https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"
-    leancloud_js_sdk: "https://cdn.jsdelivr.net/npm/leancloud-storage@3.13.2/dist/av-min.js"
-    chart: "https://cdn.bootcss.com/Chart.js/2.7.2/Chart.bundle.min.js"
+    font_awesome: "https://cdn.bootcdn.net/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    jquery: "https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.min.js"
+    leancloud_js_sdk: "https://cdn.jsdelivr.net/npm/leancloud-storage@3.13.2/dist/av-min.js" # bootcdn not available
+    chart: "https://cdn.bootcdn.net/ajax/libs/Chart.js/4.4.1/chart.min.js"
     gitalk:
       js: "https://cdn.bootcss.com/gitalk/1.8.0/gitalk.min.js"
       css: "https://cdn.bootcss.com/gitalk/1.8.0/gitalk.min.css"
     valine: "https://unpkg.com/valine/dist/Valine.min.js" # bootcdn not available
-    mathjax: "https://cdn.jsdelivr.net/npm/mathjax@4.0.0-beta.7/tex-mml-svg.min.js"  # 除了用mathjax，还可以用katex
-    mermaid: "https://cdn.bootcss.com/mermaid/8.0.0-rc.8/mermaid.min.js"
+    mathjax: "https://cdn.bootcdn.net/ajax/libs/mathjax/4.0.0-beta.7/tex-mml-svg.min.js"  # 除了用mathjax，还可以用katex
+    mermaid: "https://cdn.bootcdn.net/ajax/libs/mermaid/11.4.1/chunks/mermaid.esm.min/architecture-I3QFYML2-BNJ4OOAP.mjs"
   unpkg:
     font_awesome: "https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     jquery: "https://unpkg.com/jquery@3.3.1/dist/jquery.min.js"
