--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -51,7 +51,7 @@ sources:
       js: "https://cdn.bootcss.com/gitalk/1.8.0/gitalk.min.js"
       css: "https://cdn.bootcss.com/gitalk/1.8.0/gitalk.min.css"
     valine: "https://unpkg.com/valine/dist/Valine.min.js" # bootcdn not available
-    mathjax: "https://cdn.bootcdn.net/ajax/libs/mathjax/4.0.0-beta.7/tex-mml-svg.min.js"  # 除了用mathjax，还可以用katex
+    mathjax: "https://cdn.jsdelivr.net/npm/mathjax@4.0.0-beta.7/tex-mml-chtml.min.js"  # 除了用mathjax，还可以用katex
     mermaid: "https://cdn.bootcdn.net/ajax/libs/mermaid/11.4.1/chunks/mermaid.esm.min/architecture-I3QFYML2-BNJ4OOAP.mjs"
   unpkg:
     font_awesome: "https://use.fontawesome.com/releases/v5.15.1/css/all.css"
