--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ sources: jsdelivr
 ## => Sharing
 ##############################
 sharing:
-  provider: custom # false (default), "addtoany", "addthis", "custom"
+  provider: false # false (default), "addtoany", "addthis", "custom"
 
   ## AddThis
   addthis:
@@ -174,7 +174,7 @@ search:
 ## => Analytics
 ##############################
 analytics:
-  provider: custom # false (default), "google", "custom"
+  provider: false # false (default), "google", "custom"
 
   ## Google Analytics
   google:
@@ -214,6 +214,7 @@ exclude:
   - package-lock.json
   - package.json
   - /vendor
+  - modify-instructions.md
   - module_use.md
 
 defaults:
@@ -222,7 +223,7 @@ defaults:
       type: posts
     values:
       layout: article
-      sharing: true
+      sharing: false
       license: true
       aside:
         toc: true
