--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -1,4 +1,3 @@
-# jekyll静态变量
 default:
   text_skin: default
   highlight_theme: tomorrow-night-bright
@@ -52,4 +51,4 @@ sources:
       css: "https://cdn.jsdelivr.net/npm/gitalk@1.8.0/dist/gitalk.min.css"
     valine: "https://cdn.jsdelivr.net/npm/valine@1.5.3/dist/Valine.min.js"
     mathjax: "https://cdn.jsdelivr.net/npm/mathjax@4.0.0-beta.7/tex-mml-svg.min.js" # 除了用mathjax，还可以用katex
-    mermaid: "https://cdn.jsdelivr.net/npm/mermaid@11.4.1/dist/chunks/mermaid.esm.min/architecture-I3QFYML2-BNJ4OOAP.mjs"
+    mermaid: "https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs"
