--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -7,7 +7,7 @@ default:
     home: /
     archive: /archive.html
     rss: /feed.xml
-  mathjax: true
+  mathjax: false
   mathjax_autoNumber: true
   mermaid: false
   chart: false
